# django-oscar-iyzipay

./: .gitignore  .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml  requirements.txt
django_oscar_iyzipay/src/address/: forms.py  models.py
django_oscar_iyzipay/src/order/: apps.py
django_oscar_iyzipay/src/oscar_iyzipay/: session.py  tax.py  views.py
documentation/: modify_template.html  recipes.py
oscar_iyzipay/: apps.py  urls.py  views.py
oscar_iyzipay/address/: apps.py
oscar_iyzipay/checkout/: apps.py  session.py  urls.py  views.py
oscar_iyzipay/order/: models.py
oscar_iyzipay/oscar_iyzipay/: apps.py  session.py  views.py
oscar_iyzipay/templates/oscar/checkout/: failure.html  get.html
src/address/: apps.py  models.py
src/oscar_iyzipay/: urls.py
templates/oscar/checkout/: get.html  post.html
