[tool.poetry]
name = "django-oscar-iyzipay"
version = "0.1.4"
description = "Integration between django-oscar and iyzipay"
authors = ["Bahadır Özkan <bahadirozkan@gmail.com>"]
readme = "README.md"
packages = [{include = "django_oscar_iyzipay"}]

[tool.poetry.dependencies]
python = "^3.7"
django-oscar = "<=3.1"
iyzipay = "^1.0.41"
django-ipware = "^6.0.3"
ujson = "^5.9.0"

[tool.poetry.dev-dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
