[tool.poetry]
name = "django-oscar-iyzipay"
version = "1.0.2"
description = "Integration between django-oscar and iyzipay"
authors = ["Bahadır Özkan <bahadirozkan@gmail.com>"]
readme = "README.md"
homepage = "https://github.com/bahadirozkan/django-oscar-iyzipay"
packages = [
    {include = "oscar_iyzipay/oscar_iyzipay"},
]

include = [
    {path = "oscar_iyzipay/templates", format = ["sdist", "wheel"]}
]

[tool.poetry.dependencies]
python = "3.9"
django-oscar = "<=3.1"
iyzipay = "^1.0.41"
django-ipware = "^6.0.3"
ujson = "^5.9.0"
pre-commit = "^3.6.2"

[tool.poetry.dev-dependencies]
black = "^24.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
